--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -29,11 +29,12 @@ body::after {
   content: "";
   position: absolute;
   top: -180px;
-  right: 0;
+  right: 10px;
   height: 100vh;
+  min-height: 350px;
   width: 100%;
   background-image: url("./assets/bg-main-mobile.png");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   z-index: -2;
 }
@@ -57,16 +58,11 @@ h2 {
   font-weight: 700;
 }
 
-.header__text {
-  font-size: 28px;
-  font-weight: 400;
-  line-height: 34px;
-}
-
 .premium__about {
   margin-top: 23px;
 }
 
+.header__text,
 .premium__about,
 .footer__contact {
   font-size: 16px;
@@ -229,6 +225,7 @@ h2 {
   .main__content {
     margin: 0 auto;
     max-width: 600px;
+    max-height: 100%;
   }
 
   .illustration {
@@ -274,6 +271,12 @@ h2 {
     line-height: 52px;
   }
 
+  .header__text {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 34px;
+  }
+
   body {
     margin: 0 auto;
     max-width: 1440px;
@@ -305,7 +308,6 @@ h2 {
   }
 
   .main__content {
-    height: 600px;
     max-width: 910px;
   }
 
